--- a/Web_Project/index.html
+++ b/Web_Project/index.html
@@ -44,7 +44,7 @@
                 <option  value="technology">Technology</option>
             </select>
             <input class="input" type="text" placeholder="Key Word" id="keyword">
-            <button onclick="search()"  class="search_button"></button>
+            <button onclick="search()"  class="search_button"><img src="magnify.png" alt="" class="magni"></button>
         </div>    
     </div>
     <div id="result-count" class="result-count">Loading...</div>
